# Intune

./: .env.example  .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
intune/: apps.py  asgi.py  celery.py  settings.py  tasks.py  urls.py  utils.py  wsgi.py
intune/migrations/: 0001_initial.py  0002_team_teammember.py  0003_teammember_unique_team_user.py  0004_document.py  0005_document_content_type_document_size.py  0006_add_pgvector_extension_to_db.py  0007_documentchunk.py  0008_conversation.py  0009_chat_chatconversation.py  0010_delete_conversation.py  0011_chat_is_conversation_active.py  0012_chat_title.py
intune/models/: __init__.py  chat.py  document.py  team.py  user.py
intune/templates/: base.html  index.html  team_base.html
intune/templates/accounts/: login.html
intune/templates/team/: chat.html  chat_conversation.html  dashboard.html  upload.html
intune/views/: accounts.py  index.py  team.py
