[project]
name = "intune"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "celery>=5.5.3",
    "django>=5.2.7",
    "httpx>=0.28.1",
    "pgvector>=0.4.1",
    "psycopg>=3.2.10",
    "pymupdf>=1.26.5",
    "python-dotenv>=1.1.1",
    "redis>=6.4.0",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
]
